Revert "fixed mobile featured projects header misaligned"

--- a/src/component/LandingPageV2/FeaturedProjects/style.css
+++ b/src/component/LandingPageV2/FeaturedProjects/style.css
@@ -48,8 +48,8 @@ h2 {
   }
   .projects-container {
     font-size: 8em;
-    text-align: left;
-    max-width: 90vw;
+    text-align: center;
+    padding: 4.2vw;
   }
   .blurb-container {
     text-align: left;
